# Dog-robot-Dante

./: .gitignore  CHANGELOG.md  README.md  TODO.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
python_ai/: README.md  requirements.txt  setup.py
python_ai/ai_dante/: __init__.py  vision.py
python_ai/python_ai/: __init__.py  vision.py
python_ai/python_ai.egg-info/: PKG-INFO  SOURCES.txt
python_ai/tests/: test_vision.py
ros2_ws/: README.md
ros2_ws/launch/: dante_launch.py
ros2_ws/src/dante_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/dante_bringup/dante_bringup/: __init__.py  dante_node.py
ros2_ws/src/dante_bringup/launch/: dante_launch.py
src/: README.md  main.py
src/brain/: __init__.py  dante_brain.py
src/locomotion/: __init__.py  gait.py  kinematics.py  locomotion.py  requirements_simulation.txt  simulation_wrapper.py
src/manipulation/: __init__.py  manipulation.py
src/perception/: __init__.py  perception.py
tests/: test_kinematics.py  test_system.py
