<?xml version="1.0"?>
<package format="3">
  <name>dante_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for Dog-robot Dante (minimal example)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>python3</exec_depend>
</package>
<?xml version="1.0"?>
<package format="3">
  <name>dante_bringup</name>
  <version>0.0.0</version>
  <description>Bringup and example nodes for Dog-robot-Dante</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
